Creating update and delete a product documentation
